0030218: Visualization - custom selection presentation is not updated within SelectMgr_SelectableObject::UpdateTransformation()

SelectMgr_SelectableObject now assigns transformation to mySelectionPrs and myHilightPrs presentations.
Removed confusing method PrsMgr_PresentableObject::UpdateTransformation() with presentation as argument.